# Virtual-Cell-Reasoning-Platform

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: agents.md  architecture.md  collaboration.md  evidence-policy.md  roadmap.md
examples/: 01_knowledge_base_quickstart.py  02_immortalization_assessment.py  03_passage_trajectory_assessment.py
src/virtualcell/: __init__.py  cli.py
src/virtualcell/agents/: __init__.py  base_stub.py
src/virtualcell/agents/genome/: __init__.py  agent.py
src/virtualcell/agents/immortalization/: __init__.py  adapters.py  agent.py  baseline.py  effective_markers.py  grounding.py  hypotheses.py  limitations.py  models.py  rules.py  trajectory.py
src/virtualcell/agents/literature/: __init__.py  agent.py
src/virtualcell/agents/literature_discovery/: __init__.py  agent.py
src/virtualcell/agents/metabolism/: __init__.py  agent.py
src/virtualcell/agents/protein_interaction/: __init__.py  agent.py
src/virtualcell/agents/signaling/: __init__.py  agent.py
src/virtualcell/agents/transcription/: __init__.py  agent.py
src/virtualcell/agents/validation/: __init__.py  agent.py
src/virtualcell/api/: main.py
src/virtualcell/api/routes/: agents.py  knowledge.py  reasoning.py
src/virtualcell/core/: __init__.py  agent.py  confidence.py  config.py  contracts.py  evidence.py  experiment.py  registry.py
src/virtualcell/knowledge/: __init__.py  persistence.py  schema.py  store.py
src/virtualcell/knowledge/backends/: __init__.py  memory.py  neo4j.py  qdrant.py
src/virtualcell/knowledge/sources/: __init__.py  base.py  gene_ontology.py  immortalization_seed.py  intact.py  reactome.py  sample.py  uniprot.py
src/virtualcell/literature/: __init__.py  contracts.py  discovery.py  documents.py  extraction.py
src/virtualcell/literature/providers/: __init__.py  base.py  europe_pmc.py
src/virtualcell/orchestration/: __init__.py  graph.py
src/virtualcell/reasoning/: __init__.py  decision.py  explain.py  llm.py  qa.py
src/virtualcell/simulation/: __init__.py  engine.py
tests/: conftest.py
tests/benchmarks/: immortalization_timeseries_v1.md  immortalization_timeseries_v1.yaml  immortalization_v0.md  immortalization_v0.yaml  test_immortalization_baseline.py  test_immortalization_longseries.py  test_immortalization_realistic.py  test_immortalization_timeseries.py
tests/benchmarks/fixtures/: longseries_imm_v01.json  realistic_imm_v01.json
tests/fixtures/: intact_sample.txt  reactome_uniprot2reactome_sample.txt  sample_jats.xml  uniprot_sample.tsv
tests/integration/: test_api_health.py  test_immortalization_agent.py  test_immortalization_api.py  test_immortalization_cli.py  test_literature_discovery_agent.py  test_literature_extraction_e2e.py
tests/unit/: test_agents.py  test_confidence.py  test_decision.py  test_evidence.py  test_experiment_schema.py  test_explain.py  test_immortalization_adapters.py  test_immortalization_canonical_adapter.py  test_immortalization_effective_markers.py  test_immortalization_grounding.py  test_immortalization_hypotheses.py  test_immortalization_limitations.py  test_immortalization_models.py  test_immortalization_rules.py  test_immortalization_seed.py  test_immortalization_trajectory.py  test_immortalization_trajectory_hardening.py  test_immortalization_trajectory_models.py  test_intact_source.py  test_knowledge_memory.py  test_literature_contracts.py  test_literature_discovery.py  test_literature_documents.py  test_literature_extraction.py  test_ontology.py  test_persistence.py  test_reactome_source.py  test_reasoning.py  test_uniprot_source.py
