[project]
name = "virtualcell"
version = "0.1.0"
description = "An AI-driven, modular, explainable cell-biology reasoning platform."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Virtual Cell Platform contributors" }]
keywords = [
    "virtual-cell",
    "computational-biology",
    "systems-biology",
    "digital-twin",
    "multi-agent",
    "bioinformatics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]
graph = [
    "neo4j>=5.20",
]
vector = [
    "qdrant-client>=1.9",
]
orchestration = [
    "langgraph>=0.1",
]
llm = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pyyaml>=6",
]

[project.scripts]
virtualcell = "virtualcell.cli:main"

[project.urls]
Homepage = "https://github.com/Dracloud-sys/Virtual-Cell-Reasoning-Platform"
Repository = "https://github.com/Dracloud-sys/Virtual-Cell-Reasoning-Platform"
Documentation = "https://github.com/Dracloud-sys/Virtual-Cell-Reasoning-Platform/tree/main/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/virtualcell"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
ignore = ["N818"]

[tool.ruff.lint.per-file-ignores]
# Immortalization models mirror the domain marker vocabulary verbatim (cumulative_PDL,
# DT_hours, DT_fold_change, endogenous_TERT/CDK4, derived_*_trend): the mixedCase names
# are intentional and must match the benchmark/biology, not Python casing conventions.
"src/virtualcell/agents/immortalization/models.py" = ["N815"]
"src/virtualcell/agents/immortalization/trajectory.py" = ["N815"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
